--- a/time0420.html
+++ b/time0420.html
@@ -58,60 +58,113 @@
     //         }, 1000);
     //     }
     // }, 3000)
-    function Promise(executor){
-            let _this = this;
-            this.state = 'pending';
-            this.value = undefined;
-            this.reason = undefined;
-            this.onFulFilledFunc = [];
-            this.onRejectedFunc = [];
-            executor(resolve, reject)
-            function resolve(value){
-                if (_this.state === 'pending') {
-                    _this.value = value;
-                    console.log(_this.state)
-                    console.log(_this.value)
-                    console.log(_this.reason)
-                    console.log(_this.onFulFilledFunc)
-                    _this.onFulfilledFunc.forEach(fn => fn(value));
-                    _this.state = 'resolved'
-                }
-            }
-            function reject(reason){
-                if(_this.state === 'pending') {
-                    _this.reason = reason;
-                    _this.onRejectedFunc.forEach(fn => fn(reason));
-                    _this.state = 'rejected';
-                }
-            }
-        }
-        Promise.prototype.then = function (onFulFilled, onRejected) {
-            if (this.state === 'pending') {
-                if (typeof onFulfilled === 'function') {
-                    console.log(2)
-                    this.onFulfilledFunc.push(onFulfilled);//保存回调
-                }
-                if (typeof onRejected === 'function') {
-                    this.onRejectedFunc.push(onRejected);//保存回调
-                }
-            }
-            if (this.state === 'resolved') {
-                if (typeof onfulFilled === 'function') {
-                    onFulFilled(this.value)
-                }
-            }
-            if (this.state === 'rejected') {
-                if (typeof onRejected === 'function') {
-                    onRejected(this.reason)
-                }
-            }
-        }
+    //  ---
+    // let p = new Promise((res,rej) => {
+    //     setTimeout(() => {
+    //         let data = {
+    //             code: 200,
+    //             msg: '登录成功'
+    //         }
+    //         res(data)
+    //     })
+    // })
+    // p.then((data) => console.log(data.msg))
 
-        let p = new Promise((res,rej) => {
-            setTimeout(() => {
-                res(1)
-            },10)
-        })
-        p.then(res => console.log(res,132))
+    // function Promise2(func){
+    //     this.state = 'pending';
+    //     this.value = undefined;
+    //     this.reason = undefined;
+    //     this.sucessF = [];
+    //     this.errorF = [];
+    //     let _this = this;
+    //     func(resolved,rejected)
+    //     function resolved(val){
+    //         if (_this.state === 'pending') {
+    //             _this.value = val;
+    //             _this.sucessF.forEach(fun => fun(val))
+    //             _this.state = 'resolved'
+    //         }
+    //     }
+    //     function rejected(rea){
+    //         console.log(2,rea,_this.state)
+    //         if (_this.state === 'pending') {
+    //             _this.reason = rea;
+    //             _this.errorF.forEach(fun => fun(rea))
+    //             _this.state = 'rejected'
+    //         }
+    //     }
+    // }
+    // Promise2.prototype.then = function (onF, onR) {
+    //     console.log(1)
+    //     if (this.state === 'pending') {
+    //         if(typeof onF === 'function'){
+    //             this.sucessF.push(onF)
+    //         }
+    //         if(typeof onR === 'function'){
+    //             this.errorF.push(onR)
+    //         }
+    //     }
+    //     // if (this.resolved === 'resolved') {
+    //     //     onF(this.value)
+    //     // }
+    //     // if (this.resolved === 'rejected') {
+    //     //     onR(this.reason)
+    //     // }
+    // }
+    // let p = new Promise((res,rej) => {
+    //     setTimeout(() => {
+    //         let data = {
+    //             code: 200,
+    //             msg: '登录xx'
+    //         }
+    //         res(data)
+    //     },1000)
+    // })
+    // p.then(
+    //     (data) => {
+    //         console.log(data.msg)
+    //         return new Promise((res) => {
+    //             setTimeout(() => {
+    //                 res(123)    
+    //             },1000)
+    //         })
+    //     }
+    // ).then((data)=>{
+    //     console.log(data)
+    // // })
+    // let arr = [1,2,3,4,4,1]
+    // let newArr = arr.reduce((pre,cur)=>{
+    //     console.log(pre, cur)
+    //     // if(!pre.includes(cur)){
+    //     //     return pre.concat(cur)
+    //     // }else{
+    //     //     return pre
+    //     // }
+    //     return pre.concat(cur*2)
+    // },[])
+    // console.log(newArr);// [1, 2, 3, 4]
+    // let arr = [9,2,3,4,5];
+    // // let arr2 = arr.map(item => item * 2);
+    // // for(let key in arr){
+    // //     arr[key] = arr[key] * 2
+    // // }
+    // // for(let v of arr){
+    // //     v*=2
+    // // }
+    // let arr2 = [];
+    // arr.reduce((pre,item)=>{
+    //     console.log(pre,item)
+    //     // item = item *
+    //     arr2.push(item*2)
+    //     return pre + item
+    // },arr2)
+
+    // console.log(arr2,'x')
+    document.onload = () => {
+        console.log(333)
+    }
+    // window.onload = () => {
+    //     console.log(123)
+    // }
 </script>
 </html>
