--- a/flex.html
+++ b/flex.html
@@ -30,7 +30,7 @@
             flex:1
         }
         span{
-            display:flex;
+            /* display:flex; */
             flex:1
         }
     </style>
