--- a/copy.html
+++ b/copy.html
@@ -8,6 +8,10 @@
         <textarea></textarea>
         <button id="btn">复制</button>
         <script type="text/javascript">
+
+        // <!-- 这是我新增的一行代码 -->
+            let add = 132;
+
             // 复制的方法
             function copyText(text, callback){ // text: 要复制的内容， callback: 回调
                 let tag = document.createElement('input');
